# summon-example

./: .gitignore  CHANGELOG.md  README.md  cabal.project  cabal.project.freeze  default.nix  hie.yaml  shell.nix  summon-example.cabal  summon-haskell-example.cabal
.config/nix/: sources.json
.github/workflows/: ci.yml
app/: Main.hs
benchmark/: Main.hs
data/: expected.out
nix/: sources.json
scripts/: avoid-permission-denied  check-cli-tools  ci-copy-nix-store  ci-fix-nix-store-permissions  ci-info  ci-nix-info  ci-test-nix-shell  project-nix-build  project-nix-smoke-test  project-nix-test
src/: SummonHaskellExample.hs
test/: Spec.hs
