cabal-version:       2.4
name:                summon-haskell-example
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/steshaw/summon-haskell-example
bug-reports:         https://github.com/steshaw/summon-haskell-example/issues
license:             MIT
license-file:        LICENSE
author:              Steven Shaw
maintainer:          Steven Shaw <steven@steshaw.org>
copyright:           2021 Steven Shaw
category:            Application
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.4

source-repository head
  type:                git
  location:            https://github.com/steshaw/summon-haskell-example.git

common common-options
  build-depends:       base ^>= 4.14.1.0
  build-depends:       lens > 4 && < 5
  build-depends:       wreq ^>= 0.5
  build-depends:       generics-sop ^>= 0.5
  build-depends:       generic-lens ^>= 2.1
  build-depends:       yesod ^>= 1.6

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     SummonHaskellExample

executable summon-haskell-example
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       summon-haskell-example
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite summon-haskell-example-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       summon-haskell-example
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark summon-haskell-example-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , summon-haskell-example
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
